updated the portoflio to a cleaner code, but haven't fixed the center alignment

--- a/css/main.css
+++ b/css/main.css
@@ -617,6 +617,9 @@ header{
 .protfolio h4{
 	font-weight:700;
 }
+.protfolio h4{
+	font-weight:700;
+}
 .portfolioFilter{
 	display:block;
 	margin:0 auto;
@@ -733,7 +736,7 @@ span.hoverBox a{
 }
 
 span.hoverBox .smallIcon{
-	width: 74x;
+	width: 74px;
 	margin: 0px auto;
 	position: absolute;
 	top: 50%;
@@ -746,17 +749,32 @@ span.hoverBox .zoom{
 	visibility:hidden;
 	width:74px;
 	height:74px;
-	border:1px solid #fff;
+	border:1px solid #fff; /*ini ntar bordernya di bikin 0px aja*/
 	color:#fff;
 	position: relative;
 	left:-180%;
-	background:url(../images/plus-icon.png) 50% 50% no-repeat;
+	/*background:url(../images/plus-icon.png) 50% 50% no-repeat;*/
 	margin-left:47px;
 	/*top:40%;*/
 	text-align:center;
-	line-height:70px;
+	line-height:20px;
 	display: block;
 	float: left;
+
+	/*visibility:hidden;
+	color:#fff;
+	position: absolute;
+	font-family: 'Montserrat', sans-serif;
+	font-size:15px;
+	/*background:url(../images/plus-icon.png) 50% 50% no-repeat;*/
+	/*top:40%;
+	text-align:center;
+	line-height:20px;
+	display: block;
+	/*top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(50%, -50%);*/
 	
 	transition-duration: 0.2s;
 	-webkit-transition-duration: 0.2s;
